--- a/Year 2023/WWW Techniques/TouhouProject/styles.css
+++ b/Year 2023/WWW Techniques/TouhouProject/styles.css
@@ -3,6 +3,7 @@ body {
 }
 
 .header {
+    opacity: 70%;
     padding: 10px;
     text-align: center;
     background: #F5D2F1;
@@ -13,4 +14,31 @@ body {
 .buttons {
     padding: 10px;
     text-align: center;
+}
+
+.box{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-right: 80px;
+    margin-left: 80px;
+    box-sizing: border-box;
+    border: 3px solid rgba(208, 252, 217, 0.6);
+    background-color: rgba(252,208,243,0.6);
+    border-radius: 6px;
+}
+
+.spacer{
+    position:relative;
+    display:inline-block;
+    vertical-align:middle;
+    width:200px;
+    padding: 20px;
+}
+
+.zoom{
+    transition: transform .3s;
+}
+.zoom:hover{
+    transform: scale(1.2);
 }
