--- a/Year 2023/WWW Techniques/TouhouProject/styles.css
+++ b/Year 2023/WWW Techniques/TouhouProject/styles.css
@@ -6,10 +6,11 @@ body {
     margin: 20px 80px;
     opacity: 70%;
     padding: 10px;
-    text-align: center;
     background: #F5D2F1;
     color: black;
     font-size: 40px;
+    align-items: center;
+    display: flex;
 }
 
 .buttons {
@@ -30,7 +31,7 @@ body {
     display: inline-block;
     vertical-align: middle;
     width: 250px;
-    padding: 20px;
+    padding: 25px;
 }
 
 .zoom {
