--- a/Year 2023/WWW Techniques/TouhouProject/styles.css
+++ b/Year 2023/WWW Techniques/TouhouProject/styles.css
@@ -3,6 +3,9 @@ body {
 }
 
 .header {
+    display: grid;
+    justify-content: space-evenly;
+    grid-template-columns: auto auto auto;
     margin: 20px 80px;
     opacity: 70%;
     padding: 10px;
@@ -10,7 +13,6 @@ body {
     color: black;
     font-size: 40px;
     align-items: center;
-    display: flex;
 }
 
 .buttons {
