--- a/Year 2023/WWW Techniques/TouhouProject/styles.css
+++ b/Year 2023/WWW Techniques/TouhouProject/styles.css
@@ -3,10 +3,18 @@ body {
     background-image: url("images/coolBackground.gif");
 }
 
+.gtc3 {
+    grid-template-columns: auto auto auto;
+}
+
+.dude4 {
+    grid-template-columns: auto auto auto auto;
+}
+
+
 .header {
     display: grid;
     justify-content: space-evenly;
-    grid-template-columns: auto auto auto;
     margin: 20px 80px;
     opacity: 70%;
     padding: 10px;
@@ -29,13 +37,6 @@ body {
     border-radius: 10px;
 }
 
-.spacer {
-    position: relative;
-    display: inline-block;
-    vertical-align: middle;
-    width: 250px;
-    padding: 25px;
-}
 
 .zoom {
     transition: transform .5s;
