--- a/Year 2023/WWW Techniques/TouhouProject/styles.css
+++ b/Year 2023/WWW Techniques/TouhouProject/styles.css
@@ -37,6 +37,11 @@ body {
     border-radius: 10px;
 }
 
+.footer {
+    display: grid;
+    margin: 20px 80px;;
+    align-content: center;
+}
 
 .zoom {
     transition: transform .5s;
