--- a/Year 2023/WWW Techniques/TouhouProject/src/shop-style.css
+++ b/Year 2023/WWW Techniques/TouhouProject/src/shop-style.css
@@ -1,6 +1,6 @@
 body {
     scale: 80%;
-    background-image: url("images/coolBackground.gif");
+    background-image: url("../images/coolBackground.gif");
     color: #c92b71;
     font-size: 40px;
 }
