--- a/Year 2023/WWW Techniques/TouhouProject/src/shop-style.css
+++ b/Year 2023/WWW Techniques/TouhouProject/src/shop-style.css
@@ -5,6 +5,10 @@ body {
     font-size: 40px;
 }
 
+p {
+    margin: 10px;
+}
+
 a {
     color: inherit; /* blue colors for links too */
     text-decoration: inherit; /* no underline */
@@ -80,9 +84,9 @@ a {
 .button1 {
     background-image: url("../images/logo4-ebay.gif");
     background-repeat: no-repeat;
-    background-size: 115px 80px;
+    background-size: 115px 50px;
     width: 115px;
-    height: 80px;
+    height: 50px;
     border: 2px solid #c92b71;
 }
 
