--- a/Year 2023/WWW Techniques/TouhouProject/src/styles.css
+++ b/Year 2023/WWW Techniques/TouhouProject/src/styles.css
@@ -97,19 +97,19 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-    body {
-        background-image: url("../images/nyn-nazrin.gif");
+    .fumos {
+        flex-direction: column;
     }
 }
 
 @media screen and (min-width: 992px) {
-    body {
-        background-image: url("../images/logo4-ebay.gif");
+    .fumos {
+        flex-direction: row;
     }
 }
 
 @media screen and (min-width: 1200px) {
-    body {
-        background-image: url("../images/fumos/patchouli.png");
+    .fumos {
+        flex-direction: row;
     }
 }
