--- a/year-2023/www-techniques/touhou-project/src/styles.css
+++ b/year-2023/www-techniques/touhou-project/src/styles.css
@@ -96,6 +96,11 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+
+    .box {
+        margin: 30px 10px;
+    }
+
     .fumos {
         flex-direction: column;
     }
