--- a/year-2023/www-techniques/touhou-project/src/styles.css
+++ b/year-2023/www-techniques/touhou-project/src/styles.css
@@ -34,6 +34,10 @@ a {
 .row {
     flex: 25%;
     padding: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .flex-container {
@@ -95,7 +99,12 @@ a {
     align-content: center;
 }
 
-@media screen and (min-width: 768px) {
+img {
+    height: 100%;
+    width: 100%;
+}
+
+@media screen and (min-width: 425px) {
 
     .box {
         margin: 30px 10px;
@@ -107,22 +116,26 @@ a {
     .flex-container {
         display: table;
     }
+
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 768px) {
     .fumos {
-        flex-direction: row;
+        flex-direction: column;
     }
+
     .flex-container {
         display: table;
     }
+
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1024px) {
     .fumos {
         flex-direction: row;
     }
     .flex-container {
         display: flex;
     }
+
 }
