Color of navbar

--- a/year-2023/www-techniques/meat-in-bread/front/src/App.css
+++ b/year-2023/www-techniques/meat-in-bread/front/src/App.css
@@ -1,7 +1,8 @@
 .color-nav {
-  background-color: darkred;
+    background-color: darkred;
 }
 
-body {
-  color: white;
+.navbar-nav .nav-link {
+    color: white;
+    font-size: 40px;
 }
